made html, finished title css

--- a/index.html
+++ b/index.html
@@ -19,5 +19,26 @@
     <script src="main.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <!-- Title -->
+    <div id="title">Graph To AltText</div>
+
+    <!-- Main -->
+    <div id="main">
+      <i class="main__help-btn fas fa-question"></i>
+      <button class="main__upload-btn"></button>
+      <div class="main__drop-box">
+        <span>OR</span>
+        <span>DROP FILES HERE</span>
+      </div>
+    </div>
+
+    <!-- Rules -->
+    <div id="rules">
+      <h3>Rules for Good Alternative Text</h3>
+      <span>1. ...</span>
+      <span>2. ...</span>
+      <span>3. ...</span>
+    </div>
+  </body>
 </html>
