--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
       rel="stylesheet"
     />
     <script
@@ -25,20 +25,62 @@
 
     <!-- Main -->
     <div id="main">
-      <i class="main__help-btn fas fa-question"></i>
-      <button class="main__upload-btn"></button>
+      <div class="help">
+        <button class="main__help-btn">
+          <i class="fas fa-question"></i>
+        </button>
+        <!-- Help -->
+        <div class="main__help-dialog open">
+          <span>[사이트 사용법]</span>
+          <ul>
+            <li>그래프를 업로드한다. (png, jpg, jpeg 등)</li>
+            <li>어느 길이의 설명을 만들지 선택한다.</li>
+            <li>만들어진 설명을 복사하여 원하는 곳에 사용한다.</li>
+          </ul>
+        </div>
+      </div>
+
+      <button class="main__upload-btn">Upload Graph</button>
       <div class="main__drop-box">
-        <span>OR</span>
-        <span>DROP FILES HERE</span>
+        <span>- or -</span>
+
+        <span class="main__drop-txt">DROP FILES HERE</span>
       </div>
     </div>
 
     <!-- Rules -->
     <div id="rules">
-      <h3>Rules for Good Alternative Text</h3>
-      <span>1. ...</span>
-      <span>2. ...</span>
-      <span>3. ...</span>
+      <h2>좋은 대체 텍스트를 위한 규칙들</h2>
+      <h3>전체</h3>
+      <ul>
+        <li>
+          그래프의 유형, 데이터 종류, X축 Y축과 함께 전체적인 추세를 설명해야
+          한다.
+        </li>
+        <li>
+          약어 및 기호를 완전히 작성하고 키워드만 많이 포함되는 것을 지양한다.
+        </li>
+        <li>
+          대체 텍스트인 만큼 ‘~한 그림이다’ ‘~한 이미지다’라는 표현을 지양하고,
+          특정 색이 중요한 경우 외에는 시각적 속성에 대해서 언급하지 않는다.
+        </li>
+        <li>끝에 마침표를 포함해야 한다.</li>
+      </ul>
+      <h3>짧은 설명</h3>
+      <ul>
+        <li>125자 정도 (15-20단어) 권장한다.</li>
+      </ul>
+      <h3>긴 설명</h3>
+      <ul>
+        <li>
+          일반적인 정보에서 시작해서 점차 그래프를 가능한 구체적으로 설명해야
+          한다
+        </li>
+        <li>
+          그래프의 수치가 대략적인 숫자여도 구체적인 숫자를 제공하면 덜 장황하고
+          더 의미있다.
+        </li>
+      </ul>
     </div>
   </body>
 </html>
