--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="title">Graph To AltText</div>
 
     <!-- Main Upload-->
-    <div class="main-box main-upload inactive">
+    <div class="main-box main-upload">
       <div class="help">
         <button class="main__help-btn">
           <i class="fas fa-question"></i>
@@ -68,7 +68,7 @@
       <div class="main-select__file">
         <div class="main-select__file-item">
           <i class="fas fa-chart-bar"></i>
-          <span>Title of File.jpg</span>
+          <span class="selected-file">Title of File.jpg</span>
         </div>
         <button class="main-select__file-delete">
           <i class="fas fa-times"></i>
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Main Generated-->
-    <div class="main-box main-generated">
+    <div class="main-box main-generated inactive">
       <div class="help">
         <button class="main__help-btn">
           <i class="fas fa-question"></i>
@@ -103,7 +103,7 @@
       <div class="main-select__file">
         <div class="main-select__file-item">
           <i class="fas fa-chart-bar"></i>
-          <span>Title of File.jpg</span>
+          <span class="selected-file">Title of File.jpg</span>
         </div>
         <button class="main-select__file-delete">
           <i class="fas fa-times"></i>
@@ -112,7 +112,7 @@
 
       <div class="main-select__generated">
         <div class="generated-txt">
-          <span>hidhaflidshfliasdfl;asdjfklasjd;</span>
+          <span class="generated-span">hidhaflidshfliasdfl;asdjfklasjd;</span>
         </div>
         <button class="generated-copy">
           <i class="far fa-copy"></i>
